# Gazebo-world-plugin

./: README.md
Gazebo_plugin/custom_msg/: CMakeLists.txt  package.xml
Gazebo_plugin/custom_msg/msg/: EntityList.msg  EntityPose.msg
Gazebo_plugin/custom_msg/srv/: GetEntitiesNames.srv  GetEntityPose.srv
Gazebo_plugin/wd_plugin/: CMakeLists.txt  wd_plugin.cc  wd_plugin.hh
